name:                data-digest-crc32c
version:             0.1.2
synopsis:            Snappy Framing Format in Haskell
homepage:            https://github.com/kdavids4/Data-Digest-CRC32C
bug-reports:         https://github.com/kim/snappy-framing/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Kim Altintop
maintainer:          kim.altintop@gmail.com
copyright:           Copyright (c) 2013 Kim Altintop
category:            Checksum
build-type:          Simple
cabal-version:       >=1.10

description:
  The CRC32C checksum library from the Snappy framing package.

extra-source-files:  README.md

source-repository head
  type:     git
  location: https://github.com/kdavids4/Data-Digest-CRC32C.git

library
  default-language:  Haskell2010

  hs-source-dirs:    src

  ghc-options:      -Wall -fwarn-tabs -funbox-small-strict-fields

  exposed-modules:   Data.Digest.CRC32C

  build-depends:
      array       >= 0.4
    , base        > 4 && < 5
    , binary      >= 0.7
    , bytestring  >= 0.10
